<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:paddingTop="20dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="start" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:gravity="start"
        android:paddingStart="8dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/password"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_button"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF69B4"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="#FF69B4"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true" />


</LinearLayout>